removed some unnecessary comments

--- a/docker-ayes/k8s-litecoin-stateful-set.yaml
+++ b/docker-ayes/k8s-litecoin-stateful-set.yaml
@@ -33,11 +33,9 @@ spec:
       - name: litecoin
         image: thomasbell/litecoin
         ports:
-        # - containerPort: 80
-        #   name: web
         volumeMounts:
         - name: litecoin-state
-          mountPath: /root/.litecoin/
+          mountPath: /litecoin/.litecoin/
   volumeClaimTemplates:
   - metadata:
       name: litecoin-state
